basic/ingress.example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: kubeflow
  name: kubeflow
  namespace: istio-system
spec:
  rules:
  - host: kubeflow.mydomain.com
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kubeflow.mydomain.com
    secretName: kubeflow-mydomain-com
status:
  loadBalancer: {}
